--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   	<head>
-  		<title>Strata by HTML5 UP</title>
+  		<title>于哲松 by HTML5 UP</title>
   		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
   		<meta name="description" content="" />
   		<meta name="keywords" content="" />
@@ -22,7 +22,7 @@
 
       <header id="header">
           <a href="#" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
-          <h1><strong>I am <a href="/">Strata</a></strong>, a super simple<br />
+          <h1><strong>I am <a href="/">于哲松</a></strong>, a super simple<br />
           responsive site template freebie<br />
           crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
       </header>
