--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 	<body id="top">
 
       <header id="header">
-          <a href="#" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
+          <a href="#" class="image avatar"><img src="/images/IMG_14718-1.jpg" alt="" /></a>
           <h1><strong>I am <a href="/">于哲松</a></strong>, a super simple<br />
           responsive site template freebie<br />
           crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
